--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <main class="page-main">
       <!--Блок герой-->
       <section class="hero">
-        <div class="container">
+        <div class="container hero-container">
           <h1 class="hero-title">
             Ефективні рішення для <br />
             вашого бізнесу
@@ -88,27 +88,27 @@
         <div class="container">
           <h2 class="visually-hidden">Особливості</h2>
           <ul class="features list">
-            <li class="features-list">
+            <li class="features-list icon-antenna">
               <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="features-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li class="features-list">
+            <li class="features-list icon-clock">
               <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="features-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li class="features-list">
+            <li class="features-list icon-vector">
               <h3 class="features-title">ПЛАНУВАННЯ</h3>
               <p class="features-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="features-list">
+            <li class="features-list icon-astronaut">
               <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="features-text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -167,6 +167,28 @@
               <div class="box-name">
                 <h3 class="team-name">Ігор Дем'яненко</h3>
                 <p lang="en" class="team-text">Product Designer</p>
+                <ul class="network-list list">
+                  <li class="socials-item">
+                    <a class="socials-link link" href="https://instagram.com"
+                      >instagram</a
+                    >
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link link" href="https://twitter.com"
+                      >twitter</a
+                    >
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link link" href="https://facebook.com"
+                      >facebook</a
+                    >
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link link" href="https://linkedin.com"
+                      >LinkedIn</a
+                    >
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -179,6 +201,28 @@
               <div class="box-name">
                 <h3 class="team-name">Ольга Рєпіна</h3>
                 <p lang="en" class="team-text">Frontend Developer</p>
+                <ul class="network-list list">
+                  <li class="socials-item">
+                    <a class="socials-link link" href="https://instagram.com"
+                      >instagram</a
+                    >
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link link" href="https://twitter.com"
+                      >twitter</a
+                    >
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link link" href="https://facebook.com"
+                      >facebook</a
+                    >
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link link" href="https://linkedin.com"
+                      >LinkedIn</a
+                    >
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -191,6 +235,44 @@
               <div class="box-name">
                 <h3 class="team-name">Микола Тарасов</h3>
                 <p lang="en" class="team-text">Marketing</p>
+                <ul class="network-list list">
+                  <li class="socials-item">
+                    <a
+                      class="socials-link link"
+                      href="https://instagram.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      >instagram</a
+                    >
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      class="socials-link link"
+                      href="https://twitter.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      >twitter</a
+                    >
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      class="socials-link link"
+                      href="https://facebook.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      >facebook</a
+                    >
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      class="socials-link link"
+                      href="https://linkedin.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      >LinkedIn</a
+                    >
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -203,6 +285,28 @@
               <div class="box-name">
                 <h3 class="team-name">Михайло Єрмаков</h3>
                 <p lang="en" class="team-text">UI Designer</p>
+                <ul class="network-list list">
+                  <li class="socials-item">
+                    <a class="socials-link link" href="https://instagram.com"
+                      >instagram</a
+                    >
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link link" href="https://twitter.com"
+                      >twitter</a
+                    >
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link link" href="https://facebook.com"
+                      >facebook</a
+                    >
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link link" href="https://linkedin.com"
+                      >LinkedIn</a
+                    >
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
