--- a/index.html
+++ b/index.html
@@ -169,22 +169,38 @@
                 <p lang="en" class="team-text">Product Designer</p>
                 <ul class="network-list list">
                   <li class="socials-item">
-                    <a class="socials-link link" href="https://instagram.com"
+                    <a
+                      class="socials-link link"
+                      href="https://instagram.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
                       >instagram</a
                     >
                   </li>
                   <li class="socials-item">
-                    <a class="socials-link link" href="https://twitter.com"
+                    <a
+                      class="socials-link link"
+                      href="https://twitter.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
                       >twitter</a
                     >
                   </li>
                   <li class="socials-item">
-                    <a class="socials-link link" href="https://facebook.com"
+                    <a
+                      class="socials-link link"
+                      href="https://facebook.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
                       >facebook</a
                     >
                   </li>
                   <li class="socials-item">
-                    <a class="socials-link link" href="https://linkedin.com"
+                    <a
+                      class="socials-link link"
+                      href="https://linkedin.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
                       >LinkedIn</a
                     >
                   </li>
@@ -203,22 +219,38 @@
                 <p lang="en" class="team-text">Frontend Developer</p>
                 <ul class="network-list list">
                   <li class="socials-item">
-                    <a class="socials-link link" href="https://instagram.com"
+                    <a
+                      class="socials-link link"
+                      href="https://instagram.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
                       >instagram</a
                     >
                   </li>
                   <li class="socials-item">
-                    <a class="socials-link link" href="https://twitter.com"
+                    <a
+                      class="socials-link link"
+                      href="https://twitter.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
                       >twitter</a
                     >
                   </li>
                   <li class="socials-item">
-                    <a class="socials-link link" href="https://facebook.com"
+                    <a
+                      class="socials-link link"
+                      href="https://facebook.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
                       >facebook</a
                     >
                   </li>
                   <li class="socials-item">
-                    <a class="socials-link link" href="https://linkedin.com"
+                    <a
+                      class="socials-link link"
+                      href="https://linkedin.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
                       >LinkedIn</a
                     >
                   </li>
@@ -287,22 +319,38 @@
                 <p lang="en" class="team-text">UI Designer</p>
                 <ul class="network-list list">
                   <li class="socials-item">
-                    <a class="socials-link link" href="https://instagram.com"
+                    <a
+                      class="socials-link link"
+                      href="https://instagram.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
                       >instagram</a
                     >
                   </li>
                   <li class="socials-item">
-                    <a class="socials-link link" href="https://twitter.com"
+                    <a
+                      class="socials-link link"
+                      href="https://twitter.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
                       >twitter</a
                     >
                   </li>
                   <li class="socials-item">
-                    <a class="socials-link link" href="https://facebook.com"
+                    <a
+                      class="socials-link link"
+                      href="https://facebook.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
                       >facebook</a
                     >
                   </li>
                   <li class="socials-item">
-                    <a class="socials-link link" href="https://linkedin.com"
+                    <a
+                      class="socials-link link"
+                      href="https://linkedin.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
                       >LinkedIn</a
                     >
                   </li>
