--- a/index.html
+++ b/index.html
@@ -360,6 +360,20 @@
           </ul>
         </div>
       </section>
+      <!-- Постійні клієнти -->
+      <section class="section">
+        <div class="container">
+          <h2 class="clients-title">Постійні клієнти</h2>
+          <ul class="clients list">
+            <li class="clients-list list"></li>
+            <li class="clients-list list"></li>
+            <li class="clients-list list"></li>
+            <li class="clients-list list"></li>
+            <li class="clients-list list"></li>
+            <li class="clients-list list"></li>
+          </ul>
+        </div>
+      </section>
     </main>
     <!-- Footer -->
     <footer class="page-footer">
