--- a/portfolio.html
+++ b/portfolio.html
@@ -92,8 +92,8 @@
           </ul>
           <ul class="projects list">
             <li class="projects-list">
-              <a href="" class="link">
-                <img
+              <a href="" class="link"
+                ><img
                   src="./images/portfolio/img.jpg"
                   alt="відкритий ноутбук"
                   width="370"
