--- a/portfolio.html
+++ b/portfolio.html
@@ -48,10 +48,10 @@
         <nav class="header-nav">
           <ul class="site-nav list">
             <li class="link">
-              <a href="./index.html" class="link-current">Студія</a>
+              <a href="./index.html" class="nav-link">Студія</a>
             </li>
             <li class="link">
-              <a href="./portfolio.html" class="nav-link">Портфоліо</a>
+              <a href="./portfolio.html" class="link-current">Портфоліо</a>
             </li>
             <li class="link"><a href="" class="nav-link">Контакти</a></li>
           </ul>
