--- a/index.html
+++ b/index.html
@@ -88,27 +88,47 @@
         <div class="container">
           <h2 class="visually-hidden">Особливості</h2>
           <ul class="features list">
-            <li class="features-list icon-antenna">
+            <li class="features-list">
+              <div class="box-icon">
+                <svg class="features-icon" width="70" height="70">
+                  <use href="./images/svg/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="features-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li class="features-list icon-clock">
+            <li class="features-list">
+              <div class="box-icon">
+                <svg class="features-icon" width="70" height="70">
+                  <use href="./images/svg/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="features-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li class="features-list icon-vector">
+            <li class="features-list">
+              <div class="box-icon">
+                <svg class="features-icon" width="70" height="70">
+                  <use href="./images/svg/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="features-title">ПЛАНУВАННЯ</h3>
               <p class="features-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="features-list icon-astronaut">
+            <li class="features-list">
+              <div class="box-icon">
+                <svg class="features-icon" width="70" height="70">
+                  <use href="./images/svg/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="features-text">
                 Значимість цих проблем настільки очевидна, що реалізація
