--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
         <!-- Авторизація -->
         <ul class="auth-nav list">
           <li class="link link-mail">
+            <svg class="mail-icon" widht="16" height="12">
+              <use href="./images/svg/icons.svg#icon-envelope"></use>
+            </svg>
             <a href="mailto:info@devstudio.com" class="auth-link-mail"
               >info@devstudio.com</a
             >
@@ -89,7 +92,7 @@
           <h2 class="visually-hidden">Особливості</h2>
           <ul class="features list">
             <li class="features-list">
-              <div class="box-icon">
+              <div class="box-icon-features">
                 <svg class="features-icon" width="70" height="70">
                   <use href="./images/svg/icons.svg#icon-antenna"></use>
                 </svg>
@@ -101,7 +104,7 @@
               </p>
             </li>
             <li class="features-list">
-              <div class="box-icon">
+              <div class="box-icon-features">
                 <svg class="features-icon" width="70" height="70">
                   <use href="./images/svg/icons.svg#icon-clock"></use>
                 </svg>
@@ -113,7 +116,7 @@
               </p>
             </li>
             <li class="features-list">
-              <div class="box-icon">
+              <div class="box-icon-features">
                 <svg class="features-icon" width="70" height="70">
                   <use href="./images/svg/icons.svg#icon-diagram-1"></use>
                 </svg>
@@ -124,7 +127,7 @@
               </p>
             </li>
             <li class="features-list">
-              <div class="box-icon">
+              <div class="box-icon-features">
                 <svg class="features-icon" width="70" height="70">
                   <use href="./images/svg/icons.svg#icon-astronaut"></use>
                 </svg>
