--- a/portfolio.html
+++ b/portfolio.html
@@ -106,8 +106,8 @@
               </a>
             </li>
             <li class="projects-list">
-              <a href="" class="link">
-                <img
+              <a href="" class="link"
+                ><img
                   src="./images/portfolio/img1.jpg"
                   alt="два баскетболіста"
                   width="370"
