--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
           <h2 class="visually-hidden">Особливості</h2>
           <ul class="features list">
             <li class="features-list icon-antenna">
-              <!-- <div class="box-icon-features">
+              <div class="box-icon-features">
                 <svg class="features-icon" width="70" height="70">
                   <use href="./images/svg/icons.svg#icon-antenna"></use>
                 </svg>
-              </div> -->
+              </div>
               <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="features-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -104,11 +104,11 @@
               </p>
             </li>
             <li class="features-list icon-clock">
-              <!-- <div class="box-icon-features">
+              <div class="box-icon-features">
                 <svg class="features-icon" width="70" height="70">
                   <use href="./images/svg/icons.svg#icon-clock"></use>
                 </svg>
-              </div> -->
+              </div>
               <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="features-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -116,22 +116,22 @@
               </p>
             </li>
             <li class="features-list icon-vector">
-              <!-- <div class="box-icon-features">
+              <div class="box-icon-features">
                 <svg class="features-icon" width="70" height="70">
                   <use href="./images/svg/icons.svg#icon-diagram-1"></use>
                 </svg>
-              </div> -->
+              </div>
               <h3 class="features-title">ПЛАНУВАННЯ</h3>
               <p class="features-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="features-list icon-astronaut">
-              <!-- <div class="box-icon-features">
+              <div class="box-icon-features">
                 <svg class="features-icon" width="70" height="70">
                   <use href="./images/svg/icons.svg#icon-astronaut"></use>
                 </svg>
-              </div> -->
+              </div>
               <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="features-text">
                 Значимість цих проблем настільки очевидна, що реалізація
