--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         <!-- Авторизація -->
         <ul class="auth-nav list">
           <li class="link link-mail">
-            <svg class="mail-icon" widht="16" height="12">
+            <!-- <svg class="mail-icon" widht="16" height="12">
               <use href="./images/svg/icons.svg#icon-envelope"></use>
-            </svg>
+            </svg> -->
             <a href="mailto:info@devstudio.com" class="auth-link-mail"
               >info@devstudio.com</a
             >
