--- a/index.html
+++ b/index.html
@@ -63,11 +63,15 @@
               <use href="./images/svg/icons.svg#icon-envelope"></use>
             </svg> -->
             <a href="mailto:info@devstudio.com" class="auth-link-mail"
+              ><svg class="mail-icon" widht="16" height="12">
+                <use href="./images/svg/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="link link-tel">
             <a href="tel:+380961111111" class="auth-link-tel"
+              ><svg class="tel-icon" widht="10" height="16">
+                <use href="./images/svg/icons.svg#icon-smartphone"></use></svg
               >+38 096 111 11 11</a
             >
           </li>
