--- a/portfolio.html
+++ b/portfolio.html
@@ -57,18 +57,20 @@
           </ul>
         </nav>
         <!-- Авторизація -->
-        <ul class="auth-nav list">
-          <li class="link link-mail">
-            <a href="mailto:info@devstudio.com" class="auth-link-mail"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="link link-tel">
-            <a href="tel:+380961111111" class="auth-link-tel"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+        <div class="box-nav">
+          <ul class="auth-nav list">
+            <li class="link link-mail">
+              <a href="mailto:info@devstudio.com" class="auth-link-mail"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="link link-tel">
+              <a href="tel:+380961111111" class="auth-link-tel"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <!--Мейн-->
