правки соц.сети

--- a/index.html
+++ b/index.html
@@ -199,35 +199,62 @@
                       href="https://instagram.com"
                       target="_blank"
                       rel="noopener noreferrer"
-                      >instagram</a
+                      lang="en"
+                      aria-label="instagram"
                     >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use
+                          href="./images/svg/icons.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="socials-item">
+                    <a
+                      class="socials-link link"
+                      href="https://instagram.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      lang="en"
+                      aria-label="twitter"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/svg/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="socials-item">
                     <a
                       class="socials-link link"
-                      href="https://twitter.com"
+                      href="https://instagram.com"
                       target="_blank"
                       rel="noopener noreferrer"
-                      >twitter</a
+                      lang="en"
+                      aria-label="facebook"
                     >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use
+                          href="./images/svg/icons.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="socials-item">
                     <a
                       class="socials-link link"
-                      href="https://facebook.com"
+                      href="https://instagram.com"
                       target="_blank"
                       rel="noopener noreferrer"
-                      >facebook</a
+                      lang="en"
+                      aria-label="linkedin"
                     >
-                  </li>
-                  <li class="socials-item">
-                    <a
-                      class="socials-link link"
-                      href="https://linkedin.com"
-                      target="_blank"
-                      rel="noopener noreferrer"
-                      >LinkedIn</a
-                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use
+                          href="./images/svg/icons.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
