--- a/index.html
+++ b/index.html
@@ -518,31 +518,97 @@
     </main>
     <!-- Footer -->
     <footer class="page-footer">
-      <div class="container">
-        <a href="./index.html" class="footer-logo"
-          >Web<span class="logo-footer-web">Studio</span></a
-        >
-        <address class="box-address">
-          <ul class="address list">
-            <li class="link footer-link">
+      <div class="container box-footer">
+        <div class="box-address">
+          <a href="./index.html" class="footer-logo"
+            >Web<span class="logo-footer-web">Studio</span></a
+          >
+          <address class="box-address">
+            <ul class="address list">
+              <li class="link footer-link">
+                <a
+                  href="https://www.google.com/maps/place/бул.+Леси+Украинки,+26,+Киев,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+                  class="footer-link-address"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="link footer-link">
+                <a href="mailto:info@devstudio.com" class="footer-link-mail"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="link footer-link">
+                <a href="tel:+380961111111" class="footer-link-tel"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="box-footer-icon">
+          <h2 class="footer-title">приєднуйтесь</h2>
+          <ul class="network-list list">
+            <li class="socials-item">
               <a
-                href="https://www.google.com/maps/place/бул.+Леси+Украинки,+26,+Киев,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-                class="footer-link-address"
-                >м. Київ, пр-т Лесі Українки, 26</a
+                class="socials-link-footer link"
+                href="https://instagram.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                lang="en"
+                aria-label="instagram"
               >
+                <svg class="socials-icon" width="44" height="44">
+                  <use href="./images/svg/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
             </li>
-            <li class="link footer-link">
-              <a href="mailto:info@devstudio.com" class="footer-link-mail"
-                >info@devstudio.com</a
+
+            <li class="socials-item">
+              <a
+                class="socials-link-footer link"
+                href="https://instagram.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                lang="en"
+                aria-label="twitter"
               >
+                <svg class="socials-icon" width="44" height="44">
+                  <use href="./images/svg/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
             </li>
-            <li class="link footer-link">
-              <a href="tel:+380961111111" class="footer-link-tel"
-                >+38 096 111 11 11</a
+
+            <li class="socials-item">
+              <a
+                class="socials-link-footer link"
+                href="https://instagram.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                lang="en"
+                aria-label="facebook"
               >
+                <svg class="socials-icon" width="44" height="44">
+                  <use href="./images/svg/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="socials-item">
+              <a
+                class="socials-link-footer link"
+                href="https://instagram.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                lang="en"
+                aria-label="linkedin"
+              >
+                <svg class="socials-icon" width="44" height="44">
+                  <use href="./images/svg/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
