правки icon.svg

--- a/index.html
+++ b/index.html
@@ -506,7 +506,20 @@
         <div class="container">
           <h2 class="clients-title">Постійні клієнти</h2>
           <ul class="clients list">
-            <li class="clients-list list"></li>
+            <li class="clients-item">
+              <a
+                class="clients-link link"
+                href="https://instagram.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                lang="en"
+                aria-label="instagram"
+              >
+                <svg class="clients-icon" width="44" height="44">
+                  <use href="./images/svg/icons.svg#icon-group"></use>
+                </svg>
+              </a>
+            </li>
             <li class="clients-list list"></li>
             <li class="clients-list list"></li>
             <li class="clients-list list"></li>
@@ -532,11 +545,13 @@
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
+
               <li class="link footer-link">
                 <a href="mailto:info@devstudio.com" class="footer-link-mail"
                   >info@devstudio.com</a
                 >
               </li>
+
               <li class="link footer-link">
                 <a href="tel:+380961111111" class="footer-link-tel"
                   >+38 096 111 11 11</a
