--- a/index.html
+++ b/index.html
@@ -509,22 +509,92 @@
             <li class="clients-item">
               <a
                 class="clients-link link"
-                href="https://instagram.com"
+                href=""
                 target="_blank"
                 rel="noopener noreferrer"
                 lang="en"
                 aria-label="instagram"
               >
-                <svg class="clients-icon" width="44" height="44">
+                <svg class="clients-icon" width="170" height="92">
                   <use href="./images/svg/icons.svg#icon-group"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-list list"></li>
-            <li class="clients-list list"></li>
-            <li class="clients-list list"></li>
-            <li class="clients-list list"></li>
-            <li class="clients-list list"></li>
+
+            <li class="clients-item">
+              <a
+                class="clients-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                lang="en"
+                aria-label="instagram"
+              >
+                <svg class="clients-icon" width="170" height="92">
+                  <use href="./images/svg/icons.svg#icon-group"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="clients-item">
+              <a
+                class="clients-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                lang="en"
+                aria-label="instagram"
+              >
+                <svg class="clients-icon" width="170" height="92">
+                  <use href="./images/svg/icons.svg#icon-group"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="clients-item">
+              <a
+                class="clients-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                lang="en"
+                aria-label="instagram"
+              >
+                <svg class="clients-icon" width="170" height="92">
+                  <use href="./images/svg/icons.svg#icon-group"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="clients-item">
+              <a
+                class="clients-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                lang="en"
+                aria-label="instagram"
+              >
+                <svg class="clients-icon" width="170" height="92">
+                  <use href="./images/svg/icons.svg#icon-group"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="clients-item">
+              <a
+                class="clients-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                lang="en"
+                aria-label="instagram"
+              >
+                <svg class="clients-icon" width="170" height="92">
+                  <use href="./images/svg/icons.svg#icon-group"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
         </div>
       </section>
