--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
                 aria-label="instagram"
               >
                 <svg class="clients-icon" width="170" height="92">
-                  <use href="./images/svg/icons.svg#icon-group"></use>
+                  <use href="./images/svg/icons.svg#icon-group-1"></use>
                 </svg>
               </a>
             </li>
@@ -546,7 +546,7 @@
                 aria-label="instagram"
               >
                 <svg class="clients-icon" width="170" height="92">
-                  <use href="./images/svg/icons.svg#icon-group"></use>
+                  <use href="./images/svg/icons.svg#icon-group-2"></use>
                 </svg>
               </a>
             </li>
@@ -561,7 +561,7 @@
                 aria-label="instagram"
               >
                 <svg class="clients-icon" width="170" height="92">
-                  <use href="./images/svg/icons.svg#icon-group"></use>
+                  <use href="./images/svg/icons.svg#icon-group1"></use>
                 </svg>
               </a>
             </li>
@@ -576,7 +576,7 @@
                 aria-label="instagram"
               >
                 <svg class="clients-icon" width="170" height="92">
-                  <use href="./images/svg/icons.svg#icon-group"></use>
+                  <use href="./images/svg/icons.svg#icon-group-4"></use>
                 </svg>
               </a>
             </li>
@@ -591,7 +591,7 @@
                 aria-label="instagram"
               >
                 <svg class="clients-icon" width="170" height="92">
-                  <use href="./images/svg/icons.svg#icon-group"></use>
+                  <use href="./images/svg/icons.svg#icon-group-5"></use>
                 </svg>
               </a>
             </li>
