--- a/index.html
+++ b/index.html
@@ -59,17 +59,20 @@
         <!-- Авторизація -->
         <ul class="auth-nav list">
           <li class="link link-mail">
-            <!-- <svg class="mail-icon" widht="16" height="12">
-              <use href="./images/svg/icons.svg#icon-envelope"></use>
-            </svg> -->
             <a href="mailto:info@devstudio.com" class="auth-link-mail"
-              ><svg class="mail-icon" widht="16" height="12">
-                <use href="./images/svg/icons.svg#icon-envelope"></use></svg
+              ><span class="envelope">
+                <svg class="mail-icon" widht="16" height="12">
+                  <use href="./images/svg/icons.svg#icon-envelope"></use>
+                </svg> </span
               >info@devstudio.com</a
             >
           </li>
           <li class="link link-tel">
             <a href="tel:+380961111111" class="auth-link-tel"
+              ><span class="smartphone">
+                <svg class="tel-icon" widht="10" height="16">
+                  <use href="./images/svg/icons.svg#icon-smartphone"></use>
+                </svg> </span
               >+38 096 111 11 11</a
             >
           </li>
