--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
         <!-- Авторизація -->
         <ul class="auth-nav list">
           <li class="link link-mail">
-            <a href="mailto:info@devstudio.com" class="auth-link-mail"
+            <a
+              href="mailto:info@devstudio.com"
+              class="auth-link-mail"
+              lang="en"
+              aria-label="mail"
               ><span class="envelope">
                 <svg class="mail-icon" widht="16" height="12">
                   <use href="./images/svg/icons.svg#icon-envelope"></use>
@@ -68,7 +72,11 @@
             >
           </li>
           <li class="link link-tel">
-            <a href="tel:+380961111111" class="auth-link-tel"
+            <a
+              href="tel:+380961111111"
+              class="auth-link-tel"
+              lang="en"
+              aria-label="tel"
               ><span class="smartphone">
                 <svg class="tel-icon" widht="10" height="16">
                   <use href="./images/svg/icons.svg#icon-smartphone"></use>
